fixed homeview dish detail layout issue

--- a/app/sass/partials/_dish.scss
+++ b/app/sass/partials/_dish.scss
@@ -89,6 +89,7 @@
   }
   .tab-dish-detail{
     border:none;
+    margin-bottom:0 !important;
   }
 
   .dish-detail{
